Fix Java 21 warnings
Signed-off-by: Simon Bennetts <psiinon@gmail.com>