@@ -25,7 +25,6 @@ import java.awt.Insets;
 import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URISyntaxException;
-import java.net.URL;
 import javax.swing.JButton;
 import javax.swing.JComboBox;
 import javax.swing.JFileChooser;
@@ -333,7 +332,7 @@ public class ImportDialog extends AbstractDialog {
         }
 
         try {
-            new URL(definitionLocation).toURI();
+            new java.net.URI(definitionLocation).toURL();
             var uri = new URI(definitionLocation, true);
             return extOpenApi.importOpenApiDefinition(
                             uri,
